--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/administrador/registroPersonal.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/administrador/registroPersonal.html
@@ -26,7 +26,7 @@
         <div class="col-xs-12 col-sm-6 col-sm-offset-2"> <!-- Ajuste de offset para separar más de la izquierda -->
             <div class="card bg-dark text-white">
                 <div class="card-header">
-                    <h1>Regístrate</h1>
+                    <h1>Registre al personal</h1>
                 </div>
                 <div class="card-body">
                     <!-- Formulario -->
