--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formCooperativa.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formCooperativa.html
@@ -39,7 +39,7 @@
                                     <span th:text="${mensaje}"></span>
                                 </div>
                             </div>
-
+							<br>
                             <div class="text-center p">
                                 <button type="submit" class="btn btn-secondary">Guardar Cooperativa</button>
                             </div>
@@ -52,7 +52,7 @@
                 <!-- Espacio para la imagen a la derecha -->
                 <div class="text-center">
                     <!-- Agrega tu imagen aquí -->
-                    <img src="/images/excursion.png" alt="Descripción de la imagen" style="max-width: 35%;">
+                    <img src="/images/cooperativa.png" alt="Descripción de la imagen" style="max-width: 35%;">
                 </div>
             </div>
         </div>
