--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formRuta.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formRuta.html
@@ -22,20 +22,20 @@
                     <div class="card-header" th:text="${titulo}"></div>
                     <div class="card-body">
                         <form th:action="@{/ruta/form}" th:object="${ruta}" method="post"
-                              style="max-width: 600px; margin: 0 auto;">
+                              style="max-width: 600px; margin: 0 auto;" >
 
                             <!-- Campos del formulario -->
                             <div class="form-group row">
                                 <label class="col-form-label col-sm-4">Ruta Origen </label>
                                 <div class="col-sm-8">
-                                    <input type="text" th:field="*{rutaOrigen}" class="form-control" required>
+                                <input type="text" th:field="*{rutaOrigen}" class="form-control" required pattern="[A-Za-z]+" title="Solo se permiten letras">
                                 </div>
                             </div>
                             <div class="m-3"></div>
                             <div class="form-group row">
                                 <label class="col-form-label col-sm-4">Ruta Destino</label>
                                 <div class="col-sm-8">
-                                    <input type="text" th:field="*{rutaDestino}" class="form-control" required>
+                                   <input type="text" th:field="*{rutaDestino}" class="form-control" required pattern="[A-Za-z]+" title="Solo se permiten letras">
                                 </div>
                             </div>
                             <div class="m-3"></div>
