--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/registro.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/registro.html
@@ -1,103 +1,45 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-	<title>Registration Form</title>
-	<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-	crossorigin="anonymous">
+    <title>Registration Form</title>
+    <link rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous">
 
 <!-- Optional theme -->
 <link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-	integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
-	crossorigin="anonymous">
-	
-	<style>
-		body {
-			font-family: Arial, sans-serif;
-			background-color: #f2f2f2;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			height: 100vh;
-			margin: 0;
-		}
-		.container {
-			background-color: #07B2C4;
-			padding: 100px;
-			box-shadow: 0 0 10px rgba(0,0,0,0.1);
-			border-radius: 5px;
-			background-size: 140%;
-		}
-		.container h2 {
-			text-align: center;
-			margin-bottom: 20px;
-		}
-		.container form {
-			display: flex;
-			flex-direction: column;
-		}
-		.container label {
-			margin-bottom: 5px;
-		}
-		.container input[type="text"], .container input[type="email"], .container input[type="password"] {
-			padding: 10px;
-			border: 1px solid #ccc;
-			border-radius: 5px;
-			margin-bottom: 10px;
-		}
-		.container input[type="submit"] {
-			background-color: #0042A4;
-			color: #fff;
-			padding: 10px;
-			border: none;
-			border-radius: 5px;
-			cursor: pointer;
-			margin-top: 10px;
-		}
-		.container input[type="submit"]:hover {
-			background-color: #0042A4;
-		}
-		.container a {
-			text-align: center;
-			display: block;
-			margin-top: 10px;
-			color: #0042A4;
-			text-decoration: none;
-		}
-		.container a:hover {
-			text-decoration: underline;
-		}
-	</style>
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+    integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+    crossorigin="anonymous">
+    
+
+
+
 </head>
 <body>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 col-md-offset-3">
-				<div th:if=${param.exito}>
-					<div class="alert alert-info">Se ha registrado exitosamente a
-						la aplicación. Revise su enlace de verificacion para continuar</div>
-				</div>
-				
-				
-		<h2>Registro</h2>
-		<form th:action="@{/registro}" method="post" th:object="${usuario}">
-			<label class="control-label"  for="nombre">Nombre:</label>
-			<input 	id="nombre" type="text" class="form-control" th:field="*{nombre}" required autofocus="autofocus">
-			<label class="control-label" for="apellido">Apellido:</label>
-			<input id="apellido" class="form-control" th:field="*{apellido}" required autofocus="autofocus">
-			<label class="control-label" for="email">Email:</label>
-			<input id="email" type="email" class="form-control" th:field="*{email}" required autofocus="autofocus">
-			<label  class="control-label" for="password">Contraseña:</label>
-			<input type="password" id="password" class="form-control" th:field="*{password}" required autofocus="autofocus">
-			<input type="submit" name="registro-submit" id="registro-submit" value="Registrar">
-		</form>
-		<a th:href="@{/login}">¿Ya tienes una cuenta? Inicia sesión aquí</a>
-	</div>
-	<script
-		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-		crossorigin="anonymous"></script>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <div th:if="${param.exito}">
+                    <div class="alert alert-info">Se ha registrado exitosamente a la aplicación. Revise su enlace de verificación para continuar</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <h2>Registro</h2>
+    <form th:action="@{/registro}" method="post" th:object="${usuario}">
+        <label class="control-label"  for="nombre">Nombre:</label>
+        <input  id="nombre" type="text" class="form-control" th:field="*{nombre}" required autofocus="autofocus">
+        <label class="control-label" for="apellido">Apellido:</label>
+        <input id="apellido" class="form-control" th:field="*{apellido}" required autofocus="autofocus">
+        <label class="control-label" for="email">Email:</label>
+        <input id="email" type="email" class="form-control" th:field="*{email}" required autofocus="autofocus">
+        <label  class="control-label" for="password">Contraseña:</label>
+        <input type="password" id="password" class="form-control" th:field="*{password}" required autofocus="autofocus">
+        <input type="submit" name="registro-submit" id="registro-submit" value="Registrar">
+    </form>
+    <a th:href="@{/login}">¿Ya tienes una cuenta? Inicia sesión aquí</a>
 </body>
 </html>
