--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/error2.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/error2.html
@@ -98,7 +98,7 @@
 </div>
 <div class="custom-container">
     <div th:if="${message != null}" class="alert alert-warning" role="alert">
-    <img src="/images/correo.png" alt="Imagen de alerta" class="alert-image">
+    <img src="/images/cheque.png" alt="Imagen de alerta" class="alert-image">
         <p th:text="${message}"></p>
     </div>
  <div class="login-button-container text-center"> <!-- Centro el contenido -->
