--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/home2.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/home2.html
@@ -20,7 +20,12 @@
 					<h1>Bienvenido <span th:text="${pasajero}"></span></h1>
 					<h2>Aqui podrás reservas tus asientos y gestionar todas tus reservas de buses intercantonales registrados</h2>
 					<div class="d-flex justify-content-center justify-content-lg-start">
-						<a href="#about" class="btn-get-started scrollto">Acerca de BookMyDrive</a>
+						<div class="d-flex justify-content-center justify-content-lg-start">
+						<a href="#about" class="btn-get-started scrollto">Acerca de BookmyDrive</a> <a
+							href="https://www.youtube.com/watch?v=JkP8giu7Mvc"
+							class="glightbox btn-watch-video"><i
+							class="bi bi-play-circle"></i><span>Demo Video</span></a>
+					</div>
 						
 					</div>
 				</div>
