--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/home.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/home.html
@@ -21,7 +21,10 @@
 					<h2>Aqui podrás gestionar los boletos y unidades de la app</h2>
 					<div class="d-flex justify-content-center justify-content-lg-start">
 						<a href="#about" class="btn-get-started scrollto">Acerca de tu rol</a>
-						
+						 <a
+							href="https://www.youtube.com/watch?v=7tQRzmxPza0"
+							class="glightbox btn-watch-video"><i
+							class="bi bi-play-circle"></i><span>Demo Video</span></a>
 					</div>
 				</div>
 				<div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in"
@@ -140,7 +143,7 @@ Brindamos atención excepcional porque cada interacción es una oportunidad para
 			</div>
 		</section>
 
-	
+	</main>
 	
 	
 	
