--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarConf.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarConf.html
@@ -84,7 +84,8 @@
 								<th class="bg-dark text-white">Fecha de Configuracion</th>
 								<th class="bg-dark text-white">Descuento</th>
 								<th class="bg-dark text-white">Iva</th>
-								<th class="bg-dark text-white">Cantidad de VentaB</th>
+								<th class="bg-dark text-white">Nro-  Asientos Por Pasajero</th>
+								<th class="bg-dark text-white">Nro- Asientos Por Unidad</th>
 								<th class="bg-dark text-white">Estado</th>
 								<th class="bg-dark text-white">Acciones</th>
 
@@ -97,6 +98,7 @@
 								<td th:text="${configuracion.descuento}"></td>
 								<td th:text="${configuracion.iva}"></td>
 								<td th:text="${configuracion.cantidadVentaB}"></td>
+								<td>30,40,44</td>
 								<td th:text="${configuracion.estado}"></td>
 								<td class="d-flex align-items-center justify-content-center">
 									<a class="btn btn-secondary btn-xs mx-1"
