--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/static/Administrador/style3.css
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/static/Administrador/style3.css
@@ -1932,3 +1932,64 @@ section {
 #services {
     padding: 10px 0; /* Ajusta el espaciado vertical según tus preferencias */
 }
+
+/* Estilos del modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+/* Contenido del modal */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    border-radius: 10px;
+    animation: animateModal 0.3s ease;
+}
+
+/* Estilos del botón de cierre del modal */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* Animación de entrada del modal */
+@keyframes animateModal {
+    from {
+        transform: scale(0.7);
+    }
+
+    to {
+        transform: scale(1);
+    }
+}
+/* Estilo del icono */
+.modal-content h2 i {
+    margin-right: 10px; /* Espacio entre el icono y el texto */
+}
+
+/* Estilo del título y el texto */
+.modal-content h2,
+.modal-content p {
+    text-align: center; /* Centra el texto */
+}
