--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formConfiguracion.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/formConfiguracion.html
@@ -27,7 +27,7 @@
 
                         	<div class="m-3"></div>
 					<div class="form-group row">
-						<label class="col-form-label col-sm-4">descuento</label>
+						<label class="col-form-label col-sm-4">Descuento a aplicar:</label>
 						<div class="col-sm-8">
 							<input type="text" th:field="*{descuento}" class="form-control"
 								required>
@@ -35,7 +35,7 @@
 					</div>
 					<div class="m-3"></div>
 					<div class="form-group row">
-						<label class="col-form-label col-sm-4">iva</label>
+						<label class="col-form-label col-sm-4">Iva a aplicar:</label>
 						<div class="col-sm-8">
 							<input type="text" th:field="*{iva}" class="form-control"
 								required>
@@ -43,7 +43,7 @@
 					</div>
 					<div class="m-3"></div>
 					<div class="form-group row">
-						<label class="col-form-label col-sm-4">cantidadVentaB</label>
+						<label class="col-form-label col-sm-4">Nro- Asientos Por Persona:</label>
 						<div class="col-sm-8">
 							<select th:field="*{cantidadVentaB}" class="form-select" required>
 							<option value="3">3</option>
@@ -59,7 +59,20 @@
 					</div>
 					<div class="m-3"></div>
 					<div class="form-group row">
-						<label class="col-form-label col-sm-4">estado</label>
+						<label class="col-form-label col-sm-4">Nro- Asientos Por Unidad:</label>
+						<div class="col-sm-8">
+							<select  class="form-select" required>
+							<option value="3">30,40,44</option>
+							<option value="4">30,40,44,50</option>
+							<option value="5">25,30,40,44,50</option>
+						
+						</select>
+						</div>
+					</div>
+					<div class="m-3"></div>
+					
+					<div class="form-group row">
+						<label class="col-form-label col-sm-4">Estado</label>
 						<div class="col-sm-8">
 							<select th:field="*{estado}" class="form-select" required>
 							<option value="Activa">Activa</option>
