--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/administrador/home.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/administrador/home.html
@@ -27,7 +27,7 @@
 						<a href="#about" class="btn-get-started scrollto">Acerca de</a> <a
 							href="https://www.youtube.com/watch?v=D0SdaYGYa4I"
 							class="glightbox btn-watch-video"><i
-							class="bi bi-play-circle"></i><span>Demo Video</span></a>
+							class="bi bi-play-circle"></i><span>Tutorial de uso</span></a>
 					</div>
 				</div>
 				<div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in"
