--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/home2.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/home2.html
@@ -33,7 +33,7 @@
 						<a href="#about" class="btn-get-started scrollto">Acerca de BookmyDrive</a> <a
 							href="https://www.youtube.com/watch?v=JkP8giu7Mvc"
 							class="glightbox btn-watch-video"><i
-							class="bi bi-play-circle"></i><span>Demo Video</span></a>
+							class="bi bi-play-circle"></i><span>Tutorial de uso</span></a>
 					</div>
 						
 					</div>
