--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/home.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/home.html
@@ -24,7 +24,7 @@
 						 <a
 							href="https://www.youtube.com/watch?v=7tQRzmxPza0"
 							class="glightbox btn-watch-video"><i
-							class="bi bi-play-circle"></i><span>Demo Video</span></a>
+							class="bi bi-play-circle"></i><span>Tutorial de uso</span></a>
 					</div>
 				</div>
 				<div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in"
